tests/miniJava/pos/000669_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) java = 0 ; else java = 0 ; } }
