tests/miniJava/neg/000623_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class 0 ; } }
